tests/emo-files/invalid/unterminated-emoji-eof.emo
# unterminated emoji tests (EOF)

:cry